<resources>
    <string name="app_name">News App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="global_news">Global News</string>
    <string name="search_news">Search News</string>
    <string name="news_papers">News Papers</string>
    <string name="todo">TODO</string>
    <string name="category">Category</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="sports">Sports</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertainment</string>
    <string name="technology">Technology</string>
    <string name="science">Science</string>
    <string name="apply">Apply</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="_15_5_2021">15/5/2021</string>
</resources>