<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.top_headlines.topheadlinesbottomsheet.TopHeadLineBottomSheetFragment">


    <TextView
        android:id="@+id/mealType_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/category"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold"
        android:padding="5dp"
        android:background="@drawable/curveable_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/category_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealType_txt">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <com.google.android.material.chip.ChipGroup
                style="@style/CustomChipStyle"
                android:id="@+id/category_chipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@+id/general_chip"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/general_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/general"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/health_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/health"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/sports_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sports"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/business_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/entertainment_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entertainment"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/technology_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/technology"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/science_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/science"/>

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/applyBtn"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/white"
        android:fontFamily="serif"
        android:text="@string/apply"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/category_scrollView"
        app:layout_constraintStart_toStartOf="@+id/category_scrollView"
        app:layout_constraintTop_toBottomOf="@+id/category_scrollView" />

</androidx.constraintlayout.widget.ConstraintLayout>