<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".ui.fragments.overview.OverviewFragment">

    <ImageView
        android:id="@+id/main_imageView"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_error_place_holder"
        android:contentDescription="@string/todo" />

    <View
        android:id="@+id/gradient_black_overlay"
        android:layout_width="160dp"
        android:layout_height="20dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/gradient_white_overlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/gradient_white_overlay"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/gradient_black_overlay"
        app:layout_constraintBottom_toBottomOf="@+id/main_imageView"
        app:layout_constraintEnd_toEndOf="@+id/main_imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/main_imageView"
        app:layout_constraintTop_toTopOf="@+id/main_imageView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/publishedAt"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginEnd="5dp"
        android:text="@string/_15_5_2021"
        android:textColor="@color/textColor"
        android:textStyle="italic|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:paddingStart="3dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/main_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/description_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="serif"
        android:paddingStart="5dp"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_imageView" />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/content_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:text="TextView"
                android:textColor="@color/textColor"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textColor="@color/textColor"
        android:text="Please swipe right to read full story "
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/gradient_black_overlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />


</androidx.constraintlayout.widget.ConstraintLayout>